# axonyx-aegis

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/github-actions/: aegis-fast.yml
src/: lib.rs  main.rs
tests/: browser.rs  fast.rs
tests/browser/: login.rs
tests/fast/: opens_docs.rs
