[package]
name = "axonyx-aegis"
version = "0.1.0"
edition = "2024"
description = "Rust-first E2E and QA runner for Axonyx applications."
license = "MIT"
repository = "https://github.com/vladanPro/axonyx-aegis"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
