[package]
name = "axonyx-aegis"
version = "0.1.4"
edition = "2024"
description = "Rust-first E2E and QA runner for Axonyx applications."
license = "MIT"
repository = "https://github.com/vladanPro/axonyx-aegis"
readme = "README.md"
keywords = ["axonyx", "e2e", "testing", "qa", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]
exclude = [".github/"]

[lib]
name = "aegis"
path = "src/lib.rs"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
